# project-RAGnarok

./: .env.example  .gitignore  README.md  convert.py  main.py  pyproject.toml  run_dev.py  schema.sql  simple-rag.py
apps/api/: config.py  main.py  schemas.py
apps/api/domain/: __init__.py  models.py
apps/api/services/: decision_logging.py  response_service.py  retrieval_service.py
apps/api/tools/: image_generation.py  language_tools.py  registry.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.jsx  page.jsx
apps/web/app/api/rag/: route.js
rag_with_vector/: README.md  answer.py  backend.py  document_ingest.py  generate_image.py  index.html  package.json  retrieval.py
rag_with_vector/app/: globals.css  layout.jsx  page.jsx
rag_with_vector/app/api/health/: route.js
scripts/: ingest_documents.py
simple-rag/: README.md  backend.py  functions.py  index.html
