[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"  # Change cu124 to your target CUDA version (e.g., cu121, cu118, or cpu)
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[project]
name = "project-ragnarok"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "diffusers>=0.37.1",
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "huggingface-hub>=1.15.0",
    "lmstudio>=1.5.0",
    "openai>=2.37.0",
    "psycopg[binary]>=3.3.4",
    "safetensors>=0.7.0",
    "tiktoken>=0.13.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=5.9.0",
    "uvicorn>=0.47.0",
]
